--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
+ /* HTML5 display-role reset for older browsers  */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -47,8 +47,13 @@ table {
 	border-spacing: 0;
 }
 
+
 * {
     box-sizing: border-box;
+    /* border: 1px solid lime; */
+
+    /*  */
+    --color-hover: #4287f5;
 }
 
 html {
@@ -61,36 +66,86 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
+
+    /*  */
 }
 
 h1, h2, h3, h4, h5, h6, p, a, i {
     text-decoration: none;
+    /**/
+    color: white;
+
 }
 
 h1 {
-    font-size: 7.5rem;
+    font-size: 3rem;
 }
 
 h2 {
-    font-size: 6rem;
+    font-size: 2.5rem;
 }
 
 h3 {
-    font-size: 5rem;
+    font-size: 2rem;
 }
 
 p, a {
-    font-size: 3rem;
+    font-size: 1.5rem;
 }
+
+.app {
+    width: 75vw;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 
 /* header section */
 header {
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     background-image: url('../img/home-header.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.header--div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    /*  */
+    height: 40%;
+    background-color: rgba(0, 0, 0, .7);
+}
+
+.header--div__item > a > h1 {
+    text-align: center;
+}
+
+.header--div__item > .menu {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.menu__item:hover {
+    color: var(--color-hover);
+}
+
+.social--media--links {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.social--media--link__item {
+    filter: invert(100%) sepia(16%) saturate(2%) hue-rotate(298deg) brightness(105%) contrast(101%);
+}
+
+.social--media--link__item:hover {
+    filter: invert(41%) sepia(85%) saturate(874%) hue-rotate(192deg) brightness(99%) contrast(94%);
 }
 
 /* spacers */
@@ -99,6 +154,7 @@ header {
     height: 20vh;
     background-color: rgb(0, 4, 17);
 }
+
 .spacer-sm {
     width: 100%;
     height: 10vh;
@@ -107,39 +163,65 @@ header {
 
 /* gallery section */
 .gallery {
-    width: 100%;
-    height: 100vh;
-    text-align: center;
+    margin: 0 auto;
+    height: min-content;
     background-color: rgb(0, 4, 17);
+    display: flex;
+    flex-direction: column;
+    padding-top: 2rem;
+    gap: 2rem;
+}
+
+.gallery__item.heading > h2{
+    text-align: center;
+}
+
+
+.gallery__item.food {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    margin: .5rem auto;
+}
+
+.food__item {
+    width: 30%;
+    aspect-ratio: 1 / 1;
+}
+
+.food__item > img {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    object-position: center;
 }
 
 /* about us section */
 .about {
     width: 100%;
-    height: 75vh;
+    height: 70vh;
     text-align: center;
     background-image: url("../img/staff-cooks.jpg");
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
-}
+    /* */
 
-.about-container {
-    height: 100%;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    background-color: rgb(0, 4, 17, .8);
 }
 
 .about h2 {
     width: 100%;
 }
 
-.about-container .text {
-    width: 50%;
+.about > .about__item.text {
+    width: 65%;
 }
+
 
 /* contact us section */
 .contact {
@@ -151,10 +233,11 @@ header {
     background-color: rgb(0, 4, 17);
 }
 
+
+
 .contact-container {
-    width: 100%;
-    height: 100%;
     background-color: rgb(0, 4, 17, .8);
+    /**/
 }
 
 .contact h2 {
@@ -170,64 +253,140 @@ header {
 }
 
 .info {
-    width: 100%;
     display: flex;
     justify-content: space-around;
 }
 
+.contacts,
+.hours,
 .address {
     width: 25%;
+    height: min-content;
 }
 
-.hours {
-    width: 25%;
-    padding-bottom: 2.5vh;
+.contacts > a {
+    /* word-break: break-all; */
+    overflow-wrap: break-word;
 }
 
-.contacts {
-    width: 25%;
-}
 
 /* footer section */
 footer {
     width: 100%;
-    height: 15vh;
-    padding-top: 2.5vh;
-    font-size: 3rem;
+    background: black;
+    height: min-content;
+    padding: 2rem 0;
+    /*  */
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    
+    border-top: 1px solid white;
 }
+
+
+.footer__item.mail {
+    flex-basis: 0;
+    flex-grow: 0.4;
+}
+
+.footer__item.links--copyright {
+    flex-basis: 0;
+    flex-grow: 0.6;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 2rem;
+}
+
+.links--copyright > .links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.footer__item > .copyright > p{
+    font-size: 0.8rem;
+    text-align: center;
+}
+
+/* .footer__item.mail > button {
+} */
+
 
 /* mobile media query */
 @media (max-width: 428px) {
-    /* header section */
     
+    .app {
+        width: 100%;
+        margin: 0;
+    }
 
+    /* header section */
+
+    header {
+        height: 100vh;
+    }
+
+    .header--div {
+        height: 50%;
+    }
+    
+    .header--div__item > .menu {
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+    }
+    
     /* gallery section */
+
     .gallery {
         height: auto;
+    }
+    
+    
+    
+    .gallery__item.food {
+        flex-direction: column;
+        gap: 2rem;
+    }
+    
+    .food__item {
+        width: 100%;
+        aspect-ratio: 1 / 1;
+    }
+    
+    .food__item > img {
+        width: 100%;
+        aspect-ratio: 1 / 1;
+        object-fit: cover;
+        object-position: center;
     }
     
     /* about us section */
 
     .about {
         height: 200vh;
+        justify-content: space-evenly;
     }
     
-    .about h2 {
-        width: 100%;
-        padding-top: 5vh;
-    }
-    
-    .about-container .text {
+
+    .about > .about__item.text {
         width: 85%;
     }
+
+
+    
+    /*  */
+
+    
     
     /* contact us section */
-    .contact h3 {
-        padding-top: 2.5vh;
-    }
+    
     
     .info {
-        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
     }
     
     .address {
@@ -245,9 +404,43 @@ footer {
     }
 
     /* footer section */
+
     footer {
         height: auto;
-        padding-top: 2.5vh;
         font-size: 2rem;
+        padding-bottom: 2rem;
+        /*  */
+
+        border: none;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+
+    .footer__item {
+        flex-direction: column;
+        gap: 2rem;
+        align-items: center;
+    }
+    
+    .footer__item.mail > p {
+        margin-left: 0;
+        text-align: center;
+    }
+    
+    .footer__item.mail > button {
+        display: block;
+        width: 100%;
+    }
+
+    .footer__item.mail > input {
+        margin-left: 0;
+    } 
+    
+    .links--copyright > .links {
+        padding-top: 2rem;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
     }
 }
