--- a/css/menu.css
+++ b/css/menu.css
@@ -49,6 +49,10 @@ table {
 
 * {
     box-sizing: border-box;
+    /* border: 1px solid lime; */
+
+    /*  */
+    --color-hover: #4287f5;
 }
 
 html {
@@ -64,36 +68,79 @@ body {
 
 h1, h2, h3, h4, h5, h6, p, a, i {
     text-decoration: none;
+    /**/
+    color: white;
+
 }
 
 h1 {
-    font-size: 7.5rem;
+    font-size: 3rem;
 }
 
 h2 {
-    font-size: 6rem;
+    font-size: 2.5rem;
 }
 
 h3 {
-    font-size: 5rem;
-}
-
-h4 {
-    font-size: 4rem;
+    font-size: 2rem;
 }
 
 p, a {
-    font-size: 3rem;
+    font-size: 1.5rem;
+}
+
+.app {
+    width: 70vw;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 /* header section */
 header {
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     background-image: url('../img/menu-header.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.header--div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    /*  */
+    height: 40%;
+    background-color: rgba(0, 0, 0, .7);
+}
+
+.header--div__item > a > h1 {
+    text-align: center;
+}
+
+.header--div__item > .header--menu {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.header--menu__item:hover {
+    color: var(--color-hover);
+}
+
+.social--media--links {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.social--media--link__item {
+    filter: invert(100%) sepia(16%) saturate(2%) hue-rotate(298deg) brightness(105%) contrast(101%);
+}
+
+.social--media--link__item:hover {
+    filter: invert(41%) sepia(85%) saturate(874%) hue-rotate(192deg) brightness(99%) contrast(94%);
 }
 
 /* spacer */
@@ -120,33 +167,174 @@ header {
     background-repeat: no-repeat;
 }
 
+.menu > h2 {
+    text-align: center;
+}
+
+.menu--content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 4rem;
+}
+
+.menu-section {
+    width: 40%
+}
+
+.menu-section > div {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.menu-section > div > div {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+
 /* footer section */
 footer {
     width: 100%;
-    height: 15vh;
-    padding-top: 2.5vh;
-    font-size: 3rem;
+    background: black;
+    height: min-content;
+    padding: 2rem 0;
+    /*  */
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    
+    border-top: 1px solid white;
+}
+
+
+.footer__item.mail {
+    flex-basis: 0;
+    flex-grow: 0.4;
+}
+
+.footer__item.links--copyright {
+    flex-basis: 0;
+    flex-grow: 0.6;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 2rem;
+}
+
+.links--copyright > .links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.footer__item > .copyright > p{
+    font-size: 0.8rem;
+    text-align: center;
 }
 
 /* mobile media query */
-@media (max-width: 428px) {
+@media (max-width: 700px) {
+    
+    .app {
+        width: 100%;
+        margin: 0;
+    }
+    
     /* header section */
-    .header-title {
-        width: 75%;
-        margin: 0 auto;
-        text-align: center;
-        font-size: 4rem;
+    header {
+        height: 100vh;
+    }
+
+    .header--div {
+        height: 50%;
+    }
+    
+    .header--div__item > .header--menu {
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
     }
 
     /* menu */
     .menu {
         background-image: none;
+        background-color: white;
+        height: auto;
+        margin: 2rem 0;
+    }
+
+    .menu * {
+        color: black;
+        text-align: center;
+    }
+    
+    .menu--content {
+        flex-direction: column;
+    }
+    
+    .menu-section {
+        width: 100%
+    }
+    
+    .menu-section > h4 { 
+        font-size: 3rem;
+        border: 2px solid black;
+        width: 50%;
+        margin: 0 auto;
+    }
+
+
+    .menu-section > div {
+        align-items: center;
+        gap: 0;
+    }
+    
+    .menu-section > div > div {
+        flex-direction: column;
+        align-items: center;
     }
 
     /* footer section */
     footer {
         height: auto;
-        padding-top: 2.5vh;
         font-size: 2rem;
+        padding-bottom: 2rem;
+        /*  */
+
+        border: none;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+
+    .footer__item {
+        flex-direction: column;
+        gap: 2rem;
+        align-items: center;
+    }
+    
+    .footer__item.mail > p {
+        margin-left: 0;
+        text-align: center;
+    }
+    
+    .footer__item.mail > button {
+        display: block;
+        width: 100%;
+    }
+
+    .footer__item.mail > input {
+        margin-left: 0;
+    } 
+    
+    .links--copyright > .links {
+        padding-top: 2rem;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
     }
 }
